<resources>
    <string name="app_name">ProjectA</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="circle">Circle</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help!</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="empty_field">Please fill this field</string>
    <string name="circle_list">Circle List</string>
    <string name="circle_list_friend">Your Circle</string>
    <string name="member_circle_list">You are a member of these circle list:</string>
    <string name="my_profile">My Profile</string>
    <string name="dummy_phone">+6281172841</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_email">rka.pras@yahoo.com</string>
    <string name="edit">Edit</string>
    <string name="logout_yes">Yes, I am sure</string>
    <string name="logout_question">Are you sure you want to log out?</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_no">No, I change my mind</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_rationale">Location permission is needed to run the feature</string>
    <string name="permission_denied_explanation">Permission is required to use this feature</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="switch_button">Switch</string>
    <string name="sender_id">id_1</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="register_here">Don\'t have an account yet? Register here</string>
    <string name="retype_password">Retype Password</string>
    <string name="your_circle">Your Circle</string>
    <string name="part_of">Part of</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="result">Result</string>
    <string name="dummy_result">Dani/081129273944</string>
    <string name="button_add">button add</string>
    <string name="close">Close</string>
    <string name="mycircle">MyCircle</string>
    <string name="my_circle">My Circle</string>
    <string name="no_friends">Your circle has 0 friend. Please add new friends as destination for your distress
        signal.
    </string>
    <string name="add_friend">Add Friend</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_add_friend">Are you sure you want to add this person?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>
