<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterActivity">

    <TextView
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:id="@+id/register"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="157dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp"
            app:layout_constraintHorizontal_bias="0.212"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_fullname"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/register"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp"
            android:hint="@string/full_name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|textPersonName"
            android:ems="10"
            android:id="@+id/et_phonenumber"
            android:hint="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_fullname"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress|textPersonName|text"
            android:ems="10"
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/et_phonenumber"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp"/>
    <Button
            android:text="@string/register"
            android:layout_width="209dp"
            android:background="@drawable/btn_round_green"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="43dp"
            android:textAllCaps="false"
            android:id="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="103dp"
            android:layout_marginBottom="172dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.388"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/et_register_retype"
            app:layout_constraintVertical_bias="0.519"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_register_password" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp" android:hint="@string/password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_register_retype" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_register_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
            android:hint="@string/retype_password"/>
</androidx.constraintlayout.widget.ConstraintLayout>