<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".circle.CircleActivity">

    <TextView
            android:text="@string/circle_list_friend"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginBottom="252dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="170dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp" app:layout_constraintHorizontal_bias="0.185"
            android:layout_marginTop="137dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  android:id="@+id/ll_menu_circle"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="1dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="1dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:baselineAligned="false">
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_circle_home"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"

                      android:gravity="center"
                      android:id="@+id/btn_circle_circle"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text="@string/circle"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_circle_profile"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_circle_logout"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:gravity="center"

            />
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/member_circle_list"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginBottom="252dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_menu_circle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp" app:layout_constraintHorizontal_bias="0.123"/>
</android.support.constraint.ConstraintLayout>