<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.ProfileActivity">

    <TextView
            android:text="@string/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_myprofile"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="165dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="182dp" app:layout_constraintHorizontal_bias="0.233"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_profile"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="142dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="141dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_myprofile"/>
    <TextView
            android:text="@string/dummy_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:id="@+id/tv_myname"
            android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="175dp"/>
    <TextView
            android:text="@string/dummy_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_my_phonenumber"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_myname"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp"/>
    <TextView
            android:text="@string/dummy_email"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_myemail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="137dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="138dp"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_phonenumber"/>
    <View android:layout_width="200dp"
          android:layout_height="1dp"
          android:background="@color/grey"
          android:layout_marginTop="11dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_myemail"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="105dp"
          android:layout_marginEnd="106dp"
          app:layout_constraintEnd_toEndOf="parent"
          android:id="@+id/view"/>
    <Button
            android:text="@string/edit"
            android:layout_width="180dp"
            android:textAllCaps="false"
            android:layout_height="35dp"
            android:background="@drawable/btn_round_green"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btn_profile_change"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp"
            app:layout_constraintHorizontal_bias="0.505" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginEnd="1dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="326dp"
                  android:id="@+id/linearLayout">
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_profile_home"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/home"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:clickable="true"
                      android:focusable="true"
                      android:id="@+id/btn_profile_circle"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circle"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_profile_profile"
                      android:layout_weight="1">

            <TextView
                    android:textColor="@color/blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_profile_logout"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:gravity="center"

            />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>