<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_title" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="235dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="186dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_login_email"
            android:hint="@string/email_address" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_login_password" android:hint="@string/password" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/et_login_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="209dp"
            android:background="@drawable/btn_round_blue"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="43dp"
            android:textAllCaps="false"

            android:id="@+id/btn_login" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="161dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp" tools:text="Login"/>
    <TextView
            android:text="@string/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_hint_register"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="76dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="77dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_register" app:layout_constraintHorizontal_bias="0.473"
    />
    <Button
            android:text="@string/register"
            android:layout_width="209dp"
            android:background="@drawable/btn_round_green"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="43dp"
            android:textAllCaps="false"
            android:id="@+id/btn_login_register"
            android:layout_marginBottom="17dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="104dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="98dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>