<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
            android:text="@string/logout_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dialog_logout_confirm"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="139dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="140dp"/>
    <TextView
            android:text="@string/logout_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dialog_logout_sub"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_logout_confirm"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp"/>
    <TextView
            android:text="@string/logout_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_logout_yes"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_logout_sub"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp"/>
    <View android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/grey"
          android:layout_marginTop="11dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_logout_yes"
          android:id="@+id/view" app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/logout_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_logout_no"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="137dp"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginEnd="137dp"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>