<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeActivity">

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginEnd="1dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="326dp"
                  android:elevation="2dp"
                  android:background="@color/background"
                   android:id="@+id/linearLayout">
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_home"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text="@string/home"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:clickable="true"
                      android:focusable="true"
                      android:id="@+id/btn_circle"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/circle"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_profile"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/profile"
                    android:gravity="center"

            />
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:id="@+id/btn_settings"
                      android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:gravity="center"

            />
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="@string/help"
            android:elevation="5dp"
            android:layout_width="292dp"
            android:layout_height="308dp"
            android:background="@drawable/bg_round_red"
            android:id="@+id/btn_help"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:layout_marginEnd="162dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="269dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="219dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>