<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
            android:text="@string/confirmation"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dialog_title"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="294dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey"
          app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view2"/>
    <TextView
            android:text="@string/confirmation_add_friend"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dialog_question" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="57dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"/>
    <Button
            android:text="@string/yes"
            android:textColor="@color/white"
            android:background="@drawable/btn_round_green"
            android:layout_width="100dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirmation_yes" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_question" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_confirmation_no" android:layout_marginEnd="33dp"

            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"/>
    <Button
            android:text="@string/cancel"
            android:textSize="12sp"
            android:background="@drawable/btn_round_green"
            android:layout_width="100dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirmation_no" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_question" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>